more websites on the portfolio, about fixed some alignment

--- a/mystyle.css
+++ b/mystyle.css
@@ -58,6 +58,7 @@ img {
 
 footer {
     clear: both;
+    margin-top: 50px;
 }
 
 .centered {
